Fixed line moving screen over to whitespace, starting responsive design

--- a/assets/css/project-info.css
+++ b/assets/css/project-info.css
@@ -70,18 +70,18 @@ p {
   border-radius: 30px;
   align-self: flex-end;
   height: 500px;
-  width: 260px;
+  width: 240px;
   margin: 0;
 }
 #frank-contract {
   border-radius: 30px;
   height: 500px;
-  width: 260px;
+  width: 240px;
 }
 #frank-chatsupport {
   border-radius: 30px;
   height: 500px;
-  width: 260px;
+  width: 240px;
   margin-left: 40px;
   margin-right: 40px;
   padding: 0;
@@ -103,12 +103,12 @@ p {
   align-items: flex-start;
 }
 #nommad-img, #nommad-code, #pupfetchr-code {
-  width: 750px;
+  width: 650px;
   height: 500px;
 }
 
 @keyframes leftThenRight{
     0%   { margin-left: 0; }
-    50%  { margin-left: 100%; }
-    100% { margin-left: 0; }
+    50%  { margin-left: 80%; }
+    100% { margin-left: 0%; }
 }
